Code beautification: Replace lambda parameter names with `_` where unused and use getFirst on lists